--- a/.github/workflows/intergrate.yml
+++ b/.github/workflows/intergrate.yml
@@ -33,6 +33,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
-          folder: out
+          folder: build
           token: ${{ secrets.KEY_RELEASE }}
           clean: true
